# loadflow-lite

./: .gitignore  README.md  pyproject.toml
data/: README.md  case14.json  case14_solution.json  case30.json  case30_solution.json  case9.json  case9_n1_results.json  case9_n1_solutions.json  case9_solution.json  soln9_pf.json  t_case9_pf.json
docs/: ieee9_n1_analysis_note.tex  ieee9_n1_analysis_prompt.md  ieee9_power_flow_lecture_note.tex  power_flow_solver_study_plan.md  power_flow_solver_study_plan.tex  powerflow_v0_prompt.md  powerflow_viz_prompt.md
scripts/: generate_case9_n1_matpower_fixture.m  generate_matpower_fixtures.m  run_case9_n1.py
src/powerflow/: __init__.py  case.py  contingency.py  flows.py  io.py  solver.py  ybus.py
tests/: test_contingency.py  test_flows.py  test_ieee_cases.py  test_solver.py  test_ybus.py
viz/: app.js  index.html  styles.css
viz/layouts/: case14.layout.json  case30.layout.json  case9.layout.json
