[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loadflow-lite"
version = "0.1.0"
description = "Minimal Newton-Raphson AC power flow solver for pedagogical IEEE case validation."
requires-python = ">=3.12"
dependencies = ["numpy"]

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
